# clickhouse-native-client

./: .gitignore  BENCHMARK_RESULTS.md  BUILD.bazel  CLAUDE.md  COMPLETION_SUMMARY.md  Cargo.toml  IMPLEMENTATION_STATUS.md  LICENSE  LOWCARDINALITY_ANALYSIS.md  PHASE_1_COMPLETION_SUMMARY.md  README.md  RUST_CPP_EQUIVALENCE_SUMMARY.md  TEST_IMPLEMENTATION_PLAN.md  TYPED_COLUMNS_DEMO.md  docker-compose.yml  fix_lifetime_issues.py  generate_all_tests.py  generate_block_tests.rs  generate_block_tests.sh  generate_tests.py  justfile  rustfmt.toml  test_lc_debug.rs  test_nullable_debug.rs
.devcontainer/: Dockerfile  README.md  devcontainer.json
benches/: README.md  column_benchmarks.rs  select_benchmarks.rs
certs/: generate-certs.sh
clickhouse-config/: network.xml  ssl.xml  users.xml
features/: 2025-10-20-add-block-integration-tests-final-status.md  2025-10-20-add-block-integration-tests-status.md  2025-10-20-add-block-integration-tests.md  2025-10-20-chc-fix-columns.md  2025-10-20-chc-safe-memcpy.md  2025-10-20-chc-use-memcpy.md  2025-10-20-improve-decimal.md  2025-10-20-integration-tests-per-column.md  2025-10-20-investigate-column-issues-001-investigation.md  2025-10-20-investigate-column-issues-001.md  2025-10-21-add-block-integration-tests-failed.md  2025-10-21-add-block-integration-tests-final-status.md  2025-10-21-ensure-types-are-implemented.md  2025-10-21-improve-nullable.md  2025-10-21-nullable-serialization-fix.md  2025-10-22-ref-array-t.md  2025-10-22-ref-nested-nested-mut-completed.md  2025-10-22-ref-nested-nested-mut.md  2025-10-22-ref-numeric-use-new.md
src/: block.rs  client.rs  compression.rs  connection.rs  error.rs  lib.rs  protocol.rs  query.rs  socket.rs  ssl.rs  wire_format.rs
tests/: advanced_types_test.rs  block_tests.rs  (+89 more)
(+26 files in other folders)
